--- a/Clash/config/shadowrocks.conf
+++ b/Clash/config/shadowrocks.conf
@@ -32,7 +32,7 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 # > Always Real IP Hosts
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # > 隐藏VPN标志符（默认开启）
-hide-vpn-icon = true
+hide-vpn-icon = false
 # > WiFi辅助
 wifi-assist = false
 
