--- a/Clash/config/Billie_Config.ini
+++ b/Clash/config/Billie_Config.ini
@@ -60,7 +60,7 @@ custom_proxy_group=📹 油管视频`select`[]📹 油管节点`[]🚀 节点选
 custom_proxy_group=🎥 奈飞视频`select`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🎥 奈飞节点`[]🚀 节点选择`[]♻️ 自动选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇷🇺 俄罗斯节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]📺 动画疯节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 迪斯尼`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 亚马逊`select`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎥 亚马逊`select`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=🎥 国际抖音`select`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=📺 科科视频`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 ;custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点
