--- a/Clash/config/shadowrocks.conf
+++ b/Clash/config/shadowrocks.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-09-26 01:06:25
+# Shadowrocket: 2025-10-01 11:33:48
 [General]
 # > 日志级别(true=开启  false=关闭）
 loglevel = notify
@@ -46,15 +46,16 @@ update-url = https://raw.githubusercontent.com/billie-zhou/ACL4SSR/master/Clash/
 ✈️ 节点选择 = select, 🚀 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
 🚀 自动选择 = url-test, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇬🇧 英国节点, 🇯🇵 日本节点, 🇭🇰 香港节点, 🇸🇬 狮城节点, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 💬 WeChat = select, 🌐 全球直连, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
-🎥 TikTok = select, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🌐 全球直连, no-alert=0, hidden=0, include-all-proxies=0
+# 🎥 TikTok = select, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🌐 全球直连, no-alert=0, hidden=0, include-all-proxies=0
+🎵 Spotify = select, 🇯🇵 日本节点, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
 📽 Bahamut = select, 🇨🇳 台湾节点, 🌐 全球直连, no-alert=0, hidden=0, include-all-proxies=0
 🤖 ChatGPT = select, 🤖 智能节点, 🌐 全球直连, no-alert=0, hidden=0, include-all-proxies=0
 # 📽 BiliBili = select, 🌐 全球直连, 🇭🇰 香港节点, 🇨🇳 台湾节点, no-alert=0, hidden=0, include-all-proxies=0
-🍿 国外媒体 = url-test, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🍿 国外媒体 = select, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
 🍔 国内媒体 = select, 🌐 全球直连, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
-Ⓜ️ 微软服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
-🍎 苹果服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
-🐧 腾讯服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点
+Ⓜ️ 微软服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🍎 苹果服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
+🐧 腾讯服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇬🇧 英国节点, no-alert=0, hidden=0, include-all-proxies=0
 🇭🇰 香港节点 = url-test, update-interval=0, policy-regex-filter=🇭🇰|香港|HK|湾仔|港仔|九龙|HongKong, no-alert=0, hidden=0, include-all-proxies=0
 🇨🇳 台湾节点 = url-test, update-interval=0, policy-regex-filter=🇨🇳|台湾|TW|台北|新竹|台中|桃园|台南|高雄|花莲, no-alert=0, hidden=0, include-all-proxies=0
 🇺🇲 美国节点 = url-test, update-interval=0, policy-regex-filter=🇺🇸|美国|US|华盛顿|俄勒冈|内华达|拉斯维加斯|蒙大纳|怀俄明州|菲尼克斯|阿尔伯克基|丹佛|哥伦比亚, no-alert=0, hidden=0, include-all-proxies=0
@@ -78,12 +79,13 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppStore/AppStore.list,🍎 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleProxy/AppleProxy.list,✈️ 节点选择
 # > 社交平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,💬 WeChat
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat.list,💬 WECHAT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Tencent/Tencent.list,🐧 腾讯服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,🎥 TikTok
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,🤖 ChatGPT
+# RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/TikTok/TikTok.list,🎥 TIKTOK
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OpenAI/OpenAI.list,🤖 CHATGPT
 # > 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bahamut/Bahamut.list,📽 Bahamut
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Surge/Spotify/Spotify_Resolve.list,🎵 Spotify
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Bahamut/Bahamut.list,📽 BAHAMUT
 # RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,📽 BILIBILI
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,🍔 国内媒体
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,🍿 国外媒体
